overlay: Enable prevent ringing gesture for all
Change-Id: Ib0c0d0951bf5ab1526a9fbdf271d321f670065b7
Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

--- a/overlay/AOSPAFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPAFrameworksOverlay/res/values/config.xml
@@ -239,4 +239,7 @@
         <item>device_personalization_services/NotificationAssistant__max_importance_variance=0.5</item>
     </string-array>
 
+    <!-- Allow the gesture power + volume up to change the ringer mode while the device is interactive. -->
+    <bool name="config_volumeHushGestureEnabled">true</bool>
+
 </resources>
